--- a/finalprojectstyle.css
+++ b/finalprojectstyle.css
@@ -1,1 +1,9 @@
+/* Remove margins and padding from the list, and add a black background color */
 
+ul.topnav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: darkred;
+}
