--- a/finalprojectstyle.css
+++ b/finalprojectstyle.css
@@ -7,3 +7,20 @@ ul.topnav {
   overflow: hidden;
   background-color: darkred;
 }
+
+/* Float the list times side by side */
+ul.topnav li a {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  transition: 0.3s;
+  font-size: 17px;
+}
+
+/* Change background color of links on hover */
+ul.topnav li a:hover {background-color: black;}
+
+/* Hide the list item that contains the link that should open and close the topnav on small screens */
+ul.topnav li.icon {display: none;}
