--- a/finalprojectstyle.css
+++ b/finalprojectstyle.css
@@ -1,33 +1,28 @@
-/* Remove margins and padding from the list, and add a black background color */
-
-ul.topnav {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: darkred;
+ul {
+   list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
 }
 
-/* Float the list times side by side */
-ul.topnav li a {
-  display: inline-block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  transition: 0.3s;
-  font-size: 17px;
+li {
+    float: left;
 }
 
-/* Change background color of links on hover */
-ul.topnav li a:hover {background-color: black;}
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
 
-/* Hide the list item that contains the link that should open and close the topnav on small screens */
-ul.topnav li.icon {display: none;}
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+    background-color: #111;
+}
 
-
-p {
-  color: darkred;
-  font-size: 14px;
-    
+.active {
+  background-color: gray;
 }
