--- a/finalprojectstyle.css
+++ b/finalprojectstyle.css
@@ -34,8 +34,8 @@ p.home {
 
 main { 
    background-color: #33ccff;
-   margin: 10px;
+   margin: 0px;
    border-radius: 5px;
-   padding: 20px;
+   padding: 0;
    font-size: 110%
 }
