--- a/finalprojectstyle.css
+++ b/finalprojectstyle.css
@@ -30,10 +30,11 @@ li a:hover {
 
 p.home {
    font-size: 14px;
+   color: #33ccff
 }
 
 main { 
-   background-color: #33ccff;
+   background-color: black;
    margin: 0px;
    padding: 0px;
    font-size: 110%
