--- a/finalprojectstyle.css
+++ b/finalprojectstyle.css
@@ -29,7 +29,7 @@ li a:hover {
 
 h1 {
    color: #33ccff
-      font-family:impact, charcoal, sans-serif 
+      font-family: Impact, Charcoal, sans-serif;
 }
 }
 p.home {
