--- a/finalprojectstyle.css
+++ b/finalprojectstyle.css
@@ -27,6 +27,13 @@ li a:hover {
   background-color: gray;
 }
 
+.imagesidebar {
+   width: 300px;
+   float: right;
+   margin-left: 10px; margin-right: 10px;
+   margin-top: 0px; margin-bottom: 10px;
+}
+
 h1 {
    color: #33ccff
 }
