--- a/finalprojectstyle.css
+++ b/finalprojectstyle.css
@@ -41,8 +41,14 @@ h1 {
 h2 {
    color: #d1d1e0;
    background-color: black;
-   font-family: Times New Romans, serif
+   font-family: Times New Romans, serif;
+   padding: 20px;
+   width: 260px;
+   float: right;
+   margin-left: 10px; margin-right: 10px;
+   margin-top: 0px; margin-bottom: 10px;
 }
+
 p.home {
    font-size: 14px;
    color: #33ccff
