--- a/finalprojectstyle.css
+++ b/finalprojectstyle.css
@@ -38,6 +38,11 @@ h1 {
    color: #33ccff
 }
 
+p.home {
+   font-size: 14px;
+   color: #33ccff
+}
+
 h2 {
    color: #d1d1e0;
    background-color: black;
@@ -49,9 +54,15 @@ h2 {
    margin-top: 0px; margin-bottom: 10px;
 }
 
-p.home {
+p.aside {
+   color: #d1d1e0;
    font-size: 14px;
-   color: #33ccff
+   background-color: black;
+   font-family: Times New Romans, serif;
+   padding: 20px;
+   width: 260px;
+   float: right;
+   margin: none;
 }
 
 main { 
