--- a/finalprojectstyle.css
+++ b/finalprojectstyle.css
@@ -43,7 +43,7 @@ p.home {
    color: #33ccff
 }
 
-h2 {
+aside {
    color: #d1d1e0;
    background-color: black;
    font-family: Times New Romans, serif;
@@ -52,17 +52,6 @@ h2 {
    float: right;
    margin-left: 10px; margin-right: 10px;
    margin-top: 0px; margin-bottom: 10px;
-}
-
-p.aside {
-   color: #d1d1e0;
-   font-size: 14px;
-   background-color: black;
-   font-family: Times New Romans, serif;
-   padding: 20px;
-   width: 260px;
-   float: right;
-   margin: none;
 }
 
 main { 
