--- a/finalprojectstyle.css
+++ b/finalprojectstyle.css
@@ -31,6 +31,7 @@ li a:hover {
    width: 300px;
    float: right;
    margin-top: 0px; margin-bottom: 10px;
+   clear: right;
 }
 
 h1 {
@@ -50,6 +51,7 @@ aside {
    width: 260px;
    float: right;
    margin-top: 0px; margin-bottom: 10px;
+   clear: right;
 }
 
 main { 
