--- a/finalprojectstyle.css
+++ b/finalprojectstyle.css
@@ -20,7 +20,7 @@ li a {
 
 /* Change the link color to #111 (black) on hover */
 li a:hover {
-    background-color: #ececf9;
+    background-color: #111;
 }
 
 .active {
