--- a/finalprojectstyle.css
+++ b/finalprojectstyle.css
@@ -35,12 +35,12 @@ li a: hover {
 }
 
 h1 {
-   color: #33ccff
+   color: #ececf9;
 }
 
 p {
    font-size: 14px;
-   color: #33ccff
+   color: #ececf9;
 }
 
 aside {
