--- a/finalprojectstyle.css
+++ b/finalprojectstyle.css
@@ -56,9 +56,9 @@ aside {
 
 main { 
    background-color: black;
-   margin-left: 0px; margin-right: 10px;
    margin-top: 5px; margin-bottom: 5px;
    padding: 5px;
    font-size: 110%;
    color: #ececf9;
+   min-width: 150px;
 }
