--- a/finalprojectstyle.css
+++ b/finalprojectstyle.css
@@ -32,7 +32,8 @@ li a:hover {
    margin: 0 auto;
    margin-top: 0px; margin-bottom: 10px;
    clear: right;
-   display: block;
+   position: absolute;
+   top; 0 bottom: 0; left: 0; right: 0;
 }
 
 h1 {
