--- a/finalprojectstyle.css
+++ b/finalprojectstyle.css
@@ -37,7 +37,7 @@ li a:hover {
 }
 
 body {
-   background-image: url("");
+   background-image: url("background.jpg");
    background-color: #ececf9;
 }
 
