--- a/index2style.css
+++ b/index2style.css
@@ -47,3 +47,11 @@ main {
    padding: 5px;
    font-size: 110%;
 }
+
+aside {
+   float: left;
+   background-color: darkred;
+   padding: 5px;
+   margin-top: 5px; margin-bottom: 5px;
+   font-size: 14px;
+}
