--- a/finalprojectstyle.css
+++ b/finalprojectstyle.css
@@ -42,16 +42,12 @@ body {
 }
 
 h1 {
-   color: darkred;
-}
-
-h4 {
    color: #ececf9;
 }
 
 p {
    font-size: 14px;
-   color: darkred;
+   color: #ececf9;
 }
 
 aside {
