--- a/index2style.css
+++ b/index2style.css
@@ -59,5 +59,5 @@ aside {
    padding: 5px;
    margin-top: 5px; margin-bottom: 5px;
    font-size: 14px;
-   min-width: 150px;
+   min-width: 150px; max-width: 350px;
 }
