--- a/finalprojectstyle.css
+++ b/finalprojectstyle.css
@@ -32,8 +32,6 @@ li a:hover {
    margin: 0 auto;
    margin-top: 0px; margin-bottom: 10px;
    clear: right;
-   position: absolute;
-   top; 0 bottom: 0; left: 0; right: 0;
 }
 
 body {
@@ -51,7 +49,7 @@ aside {
    font-family: Times New Romans, serif;
    padding: 20px;
    width: 260px;
-   float: left;
+   float: right;
    margin-top: 10px; margin-bottom: 10px;
    clear: right;
 }
