--- a/finalprojectstyle.css
+++ b/finalprojectstyle.css
@@ -50,7 +50,7 @@ aside {
    font-family: Times New Romans, serif;
    padding: 20px;
    width: 260px;
-   float: right;
+   float: left;
    margin-top: 10px; margin-bottom: 10px;
    clear: right;
 }
