--- a/finalprojectstyle.css
+++ b/finalprojectstyle.css
@@ -64,7 +64,7 @@ main {
 }
 
 footer {
-   background-color: darkred;
+   background-color: #8B0000;
    list-style-type: none;
    margin: 0;
    padding: 0;
