--- a/finalprojectstyle.css
+++ b/finalprojectstyle.css
@@ -48,7 +48,7 @@ aside {
    background-color: black;
    font-family: Times New Romans, serif;
    padding: 20px;
-   width: 260px;
+   min-width: 150px;
    float: left;
    margin-top: 10px; margin-bottom: 10px;
    clear: right;
