--- a/finalprojectstyle.css
+++ b/finalprojectstyle.css
@@ -65,9 +65,10 @@ main {
 
 footer {
    background-color: darkred;
-   list-style-type: none;
-   margin: 0;
-   padding: 0;
-   overflow: hidden;
+   position: absolute;
+   right: 0;
+   bottom: 0;
+   left: 0;
+   padding: 1rem;
    text-align: center;
 }
