--- a/index2style.css
+++ b/index2style.css
@@ -71,3 +71,8 @@ footer {
   background-color: darkred;
   text-align: center;
 }
+
+p.footer {
+   background-color: darkred;
+   text-align: center;
+}
