--- a/index2style.css
+++ b/index2style.css
@@ -63,14 +63,12 @@ aside {
 }
 
 footer {
-  position: fixed;
-  right: 0;
+  background: darkred;
+  width: 100%;
+  height: 100px;
+  position: absolute;
   bottom: 0;
   left: 0;
-  padding: 0px;
-  background-color: darkred;
-  text-align: center;
-  color: black;
 }
 
 p.footer {
