--- a/index2style.css
+++ b/index2style.css
@@ -66,7 +66,7 @@ footer {
   background: darkred;
   width: 100%;
   height: 100px;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
 }
