--- a/index2style.css
+++ b/index2style.css
@@ -63,12 +63,13 @@ aside {
 }
 
 footer {
-  background: darkred;
-  width: 100%;
-  height: 100px;
   position: fixed;
+  right: 0;
   bottom: 0;
   left: 0;
+  padding: 0;
+  background-color: darkred;
+  text-align: center;
 }
 
 p.footer {
