--- a/index1style.css
+++ b/index1style.css
@@ -44,3 +44,12 @@ main {
    padding: 5px;
    font-size: 110%;
 }
+
+footer {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 0px;
+  background-color: darkred;
+  text-align: center;
