--- a/finalprojectstyle.css
+++ b/finalprojectstyle.css
@@ -64,11 +64,11 @@ main {
 }
 
 footer {
-   background-color: darkred;
-   position: absolute;
-   right: 0;
-   bottom: 0;
-   left: 0;
-   padding: 0px;
-   text-align: center;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 0;
+  background-color: darkred;
+  text-align: center;
 }
