--- a/index2style.css
+++ b/index2style.css
@@ -96,7 +96,7 @@ aside.right {
    min-width: 150px; max-width; 250px;
 }
 
-p.right {
+p.poem {
    color: darkblue;
    font-size: 14px;
    font-style: italics;
