--- a/index2style.css
+++ b/index2style.css
@@ -99,6 +99,6 @@ aside.right {
 p {
    color: darkblue;
    font-size: 14px;
-   font-style: italics;
+   font-style: italic;
    line-height: 20px;
 }
