--- a/index2style.css
+++ b/index2style.css
@@ -97,9 +97,7 @@ aside.right {
    min-width: 150px; max-width; 250px;
 }
 
-p.itlaic {
-   color: darkblue;
+p {
+   color: olivegreen;
    font-size: 14px;
-   font-style: italic;
-   line-height: 10px;
 }
