--- a/index2style.css
+++ b/index2style.css
@@ -109,3 +109,9 @@ cite {
 .white {
    color: white;
 }
+ .image {
+    float: left;
+    width: 150px;
+    margin-top: 10px; margin-bottom: 10px;
+    clear: right;
+}
