--- a/index2style.css
+++ b/index2style.css
@@ -65,7 +65,7 @@ aside {
    float: left;
    background-color: darkred;
    padding: 20px;
-   margin-top: 5px; margin-bottom: 100px;
+   margin-top: 5px; margin-bottom: 10pxpx;
    font-size: 14px;
    min-width: 150px; max-width: 750px;
 }
