--- a/index2style.css
+++ b/index2style.css
@@ -113,4 +113,5 @@ cite {
  .image {
     width: 150px;
     margin-top: 10px; margin-bottom: 10px;
+    margin-left: 300px; margin-right: 300px;
 }
