--- a/finalprojectstyle.css
+++ b/finalprojectstyle.css
@@ -29,7 +29,7 @@ li a:hover {
 
 .imagecenter {
    width: 150px;
-   margin: 0 auto;
+   margin-left: 10px; margin-right: 0;
    margin-top: 10px; margin-bottom: 10px;
    clear: right;
 }
