--- a/index1style.css
+++ b/index1style.css
@@ -29,12 +29,12 @@ li a:hover {
 
 
 h1 {
-   color: #33ccff;
+   color: darkred;
 }
 
 p {
    font-size: 14px;
-   color: #33ccff;
+   color: white;
 }
 
 main { 
