--- a/index1style.css
+++ b/index1style.css
@@ -27,6 +27,10 @@ li a:hover {
   background-color: gray;
 }
 
+body {
+   background-image: url("background.jpg");
+   background-color: #ececf9;
+}
 
 h1 {
    color: darkred;
