--- a/index1style.css
+++ b/index1style.css
@@ -49,8 +49,16 @@ main {
    background-color: black;
    margin-left: 0px; margin-right: 10px;
    margin-top: 5px; margin-bottom: 5px;
-   padding: 5px;
+   padding: 20px;
    font-size: 110%;
+}
+
+aside {
+   background-color: black;
+   margin-left: 0px; margin-right: 10px;
+   margin-top: 5px; margin-bottom: 30px;
+   padding: 20px;
+   font-size 110%;
 }
 
 footer {
