--- a/index1style.css
+++ b/index1style.css
@@ -59,6 +59,7 @@ aside {
    margin-top: 10px; margin-bottom: 90px;
    padding: 20px;
    font-size 110%;
+   max-width: 750px; min-width: 150px;
 }
 
 footer {
