--- a/index1style.css
+++ b/index1style.css
@@ -76,3 +76,8 @@ footer {
    color: white;
    font-size: 14px;
 }
+
+.image {
+   margin-top: 10px; margin-bottom: 20px;
+   margin-left: 10px; margin-right 10px;
+}
