--- a/index1style.css
+++ b/index1style.css
@@ -79,5 +79,5 @@ footer {
 
 .image {
    margin-top: 10px; margin-bottom: 20px;
-   margin-left: 10px; margin-right 10px;
+   margin-left: 10px; margin-right: 10px;
 }
