--- a/musicstyle.css
+++ b/musicstyle.css
@@ -41,6 +41,10 @@ h1 {
    color: darkred;
 }
 
+h2 {
+   color: darkgray;
+}
+
 footer {
   position: fixed;
   right: 0;
@@ -56,7 +60,6 @@ footer {
    font-size: 14px;
 }
 
-p {
-   font-size: 14px;
+h2 {
    color: white;
 }
